--- a/PhotoScreensaverPlus/PhotoScreensaverPlus.csproj
+++ b/PhotoScreensaverPlus/PhotoScreensaverPlus.csproj
@@ -72,6 +72,7 @@
     <Reference Include="NLog, Version=3.2.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\nuget-packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
